--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "social-share.js": "^1.0.16",
     "sw-precache-webpack-plugin": "^0.11.4",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.0.4",
