--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "vue": "^2.4.2",
+    "vue-lazyload": "^1.1.4",
     "vue-router": "^2.7.0"
   },
   "devDependencies": {
